--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.zip'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.github.blackfizz:eazegraph:1.2.0@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.flavienlaurent.datetimepicker:library:0.0.2'
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
