--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".Activity_Learn"
             android:label="@string/title_activity_activity__learn">
         </activity>
+        <activity
+            android:name=".clases.cBasico"
+            android:label="@string/title_activity_c_basico">
+        </activity>
     </application>
 
 </manifest>
