--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="yan.samux.ikaros.com.savac4k">
+    package="yan.samux.ikaros.com.savac4k" >
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".Login"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".Register"
-            android:label="@string/title_activity_register">
+            android:label="@string/title_activity_register" >
         </activity>
         <activity
             android:name=".Main"
-            android:label="@string/main">
+            android:label="@string/main" >
         </activity>
         <activity
             android:name=".Activity_Learn"
-            android:label="@string/title_activity_activity__learn">
+            android:label="@string/title_activity_activity__learn" >
         </activity>
         <activity
             android:name=".clases.cBasico"
-            android:label="@string/title_activity_c_basico">
+            android:label="@string/title_activity_c_basico" >
+        </activity>
+        <activity
+            android:name=".clases.cNumbers"
+            android:label="@string/title_activity_c_numbers" >
+        </activity>
+        <activity
+            android:name=".clases.cAnimales"
+            android:label="@string/title_activity_c_animales" >
+        </activity>
+        <activity
+            android:name=".clases.cObject"
+            android:label="@string/title_activity_c_object" >
+        </activity>
+        <activity
+            android:name=".clases.cCountry"
+            android:label="@string/title_activity_c_country" >
+        </activity>
+        <activity
+            android:name=".clases.cGesture"
+            android:label="@string/title_activity_c_gesture" >
+        </activity>
+        <activity
+            android:name=".clases.cActions"
+            android:label="@string/title_activity_c_actions" >
         </activity>
     </application>
 
