--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.github.gabrielemariotti.cards:library:1.9.1'
+    compile 'com.squareup.picasso:picasso:2.4.0'
 }
