--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
     buildTypes {
         release {
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.github.gabrielemariotti.cards:library:1.9.1'
     compile 'com.squareup.picasso:picasso:2.4.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
 }
