--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".app.AppController">
         <activity
             android:name=".Login"
             android:label="@string/app_name" >
@@ -74,6 +75,10 @@
         <activity
             android:name=".pruebas.LOOPJprueba"
             android:label="@string/title_activity_loopjprueba" >
+        </activity>
+        <activity
+            android:name=".pruebas.VolleyPrueba"
+            android:label="@string/title_activity_volley_prueba" >
         </activity>
     </application>
 
