--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name=".app.AppController">
+        android:name=".app.AppControllerClass">
         <activity
             android:name=".Login"
             android:label="@string/app_name" >
